comment about current status

--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@ function create_graph()
 </HEAD> 
 
 <BODY>
-RPN
+RPN tree
+
+Пугачев Кирилл 472 группа
+
+Проект в стадии доработки!!!
 
 <FORM name="form1"> 
 
