--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@ function create_graph()
 <BODY>
 RPN tree
 
-Пугачев Кирилл 472 группа
+Pugachev Kirill 472 group
 
-Проект в стадии доработки!!!
+under constraction
 
 <FORM name="form1"> 
 
