--- a/index.html
+++ b/index.html
@@ -247,11 +247,10 @@ function create_graph()
 </HEAD> 
 
 <BODY>
-RPN tree
-
 Pugachev Kirill 472 group
-
-under constraction
+<HR>
+RPN tree
+allow symbols: +, -, *, /, a-z, A-Z, (, )
 
 <FORM name="form1"> 
 
