--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     .node circle 
     {
     	fill: #fff;
-        stroke: DeepSkyBlue;
+        stroke: Salmon;
         stroke-width: 2px;
     }
 
@@ -247,10 +247,15 @@ function create_graph()
 </HEAD> 
 
 <BODY>
-Pugachev Kirill 472 group
+Pugachev Kirill 402 group
 <HR>
-RPN tree
-allow symbols: +, -, *, /, a-z, A-Z, (, )
+RPN tree <br>
+allow symbols: +, -, *, /, 0-9, a-z, A-Z, (, ). <br>
+examples:<br>
+1. (1+2)*3<br>
+2. (ABC)<br>
+3. 1+2-3+4-5+6<br>
+4. (1*1/2)^a^A-874*(34^b-32)/654<br>
 
 <FORM name="form1"> 
 
