--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ function create_graph()
 // ************** Generate the tree diagram	 *****************
  var margin = {top: 40, right: 120, bottom: 20, left: 120},
  width = 960 - margin.right - margin.left,
- height = 500 - margin.top - margin.bottom;
+ height = 1000 - margin.top - margin.bottom;
 		
  var i = 0;
  var tree = d3.layout.tree()
@@ -259,7 +259,7 @@ examples:<br>
 
 <FORM name="form1"> 
 
-<pre> 
+<pre align="center"> 
 
 input:  <input type="text" size=64 name="fl">
 
