--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ output: <input type="text" disabled="disabled" size=64 name="fres">
 
 </pre>
 
-<input type="button" value=parse onClick=" main (form1)"> <HR> 
+<input align="center" type="button" value=parse onClick=" main (form1)"> <HR> 
 
 </FORM> 
 
