--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ function create_graph()
 // ************** Generate the tree diagram	 *****************
  var margin = {top: 40, right: 120, bottom: 20, left: 120},
  width = 960 - margin.right - margin.left,
- height = 1000 - margin.top - margin.bottom;
+ height = 1080 - margin.top - margin.bottom;
 		
  var i = 0;
  var tree = d3.layout.tree()
@@ -265,10 +265,10 @@ input:  <input type="text" size=64 name="fl">
 
 output: <input type="text" disabled="disabled" size=64 name="fres">
 
+
+
+<input type="button" value=parse onClick=" main (form1)"> <HR> 
 </pre>
-
-<input align="center" type="button" value=parse onClick=" main (form1)"> <HR> 
-
 </FORM> 
 
 </BODY> 
