--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <HEAD>
 
-<TITLE>pugachev_kirill_part1_01</TITLE> 
+<TITLE>pugachev_kirill_402_part1</TITLE> 
 <script type="text/javascript" src = "d3.min.js"></script>
 <style>
     .node circle 
@@ -184,8 +184,8 @@ function create_graph()
  treeData[0] = node_tree;
 
 // ************** Generate the tree diagram	 *****************
- var margin = {top: 40, right: 120, bottom: 20, left: 120},
- width = 960 - margin.right - margin.left,
+ var margin = {top: 40, right: 120, bottom: 20, left: 120};
+ width = 1080 - margin.right - margin.left;
  height = 1080 - margin.top - margin.bottom;
 		
  var i = 0;
