--- a/index.html
+++ b/index.html
@@ -155,6 +155,14 @@ function get_number()
  postfix_notaion.push(number); 
 }
 
+function SaveHistory() 
+{
+ req = document.getElementById("fl").value;
+ if (req != '') {
+ link = 'save.php?request="' + req + '"';
+ window.location.href=link;
+}
+
 function create_graph()
 {
  var treeData = [];
@@ -268,6 +276,7 @@ output: <input type="text" disabled="disabled" size=64 name="fres">
 
 
 <input type="button" value=parse onClick=" main (form1)"> <HR> 
+<input type="button" value="save history" onClick=" SaveHistory () "> <HR> 
 </pre>
 </FORM> 
 
